--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <h1>Trina Armitage-DES350
   </h1>
 <div>
-<a href="Calculator.html" target="_blank"> Calculator</a>
+<a href="Calc 1/Calculator.html" target="_blank"> Calculator</a>
 </div>
 <div>
-<a href="Calculator2.html" target="_blank"> Calculator 2</a>
+<a href="Calc 2/Calculator2.html" target="_blank"> Calculator 2</a>
 </div>
 </body>
 </html>
